--- a/DesignerRHN/DesignerRHN-war/web/NovedadTercero.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/NovedadTercero.xhtml
@@ -88,8 +88,8 @@
                         <fieldset style="position: absolute;top: 70px;left: 10px;height: 144px;width: 580px; border-radius: 10px; text-align: left">
                             <legend style="font-size: 14px; color: #14388B"><strong>#{msg['terceros']}</strong></legend>
 
-                            <p:commandButton style="width: 200px; height: 25px; position: absolute; left: 630px; top: 50px;" id="btnBuscarTerceros" actionListener="#{controlNovedadesTerceros.asignarIndex(-1, 4, 0)}" value="#{msg['buscar']}" process="@this"/>
-                            <p:commandButton style="width: 200px; height: 25px; position: absolute; left: 630px; top: 80px;" id="btnMostrarTodos" actionListener="#{controlNovedadesTerceros.mostrarTodos()}" value="#{msg['mostrar']}" process="@this"/>       
+                            <p:commandButton id="btnBuscarTerceros" style="position: absolute; left: 630px; top: 30px; height: 30px; width: 180px; background-image: url(Imagenes/Iconos/buscardbL.png); background-size: 100% 100%; background-repeat: no-repeat;" value=" " actionListener="#{controlNovedadesTerceros.asignarIndex(-1, 4, 0)}" process="@this"/>
+                            <p:commandButton id="btnMostrarTodos" style="position: absolute; left: 630px; top: 70px; height: 30px; width: 180px; background-image: url(Imagenes/Iconos/todosdbL.png); background-size: 100% 100%; background-repeat: no-repeat;" value=" "  actionListener="#{controlNovedadesTerceros.mostrarTodos()}" process="@this"/>
 
                             <p:dataTable id="datosTerceros" var="terceros" value="#{controlNovedadesTerceros.listaTercerosNovedad}"
                                          rowKey="#{terceros.secuencia}" rowIndexVar="indiceT" style=" border: 1px; text-align: left; width: 560px"                           
@@ -110,8 +110,8 @@
                             </p:dataTable>
                         </fieldset>
 
-                        <p:commandButton style="position: absolute; left: 670px; top: 475px;" icon="ui-icon-check" id="ACEPTAR" disabled="#{controlNovedadesTerceros.guardado}" value="#{msg['aceptar']}" onclick="confirmarGuardar.show();" update=":form:datosNovedadesTercero" process="@this" />
-                        <p:commandButton style="position: absolute; left: 760px; top: 475px;" icon="ui-icon-arrowreturnthick-1-w" id="ATRAS" action="novedad" value="#{msg['atras']}" actionListener="#{controlNovedadesTerceros.salir()}" />
+                        <p:commandButton id="ACEPTAR" style="position: absolute; left: 664px; top: 470px; height: 33px; width: 100px; background-image: url(Imagenes/Iconos/aceptar.png); background-size: 100% 100%; background-repeat: no-repeat;" value=" " disabled="#{controlNovedadesTerceros.guardado}" onclick="confirmarGuardar.show();" update=":form:datosNovedadesTercero" process="@this"/>
+                        <p:commandButton id="ATRAS" style="position: absolute; left: 765px; top: 470px; height: 33px; width: 100px; background-image: url(Imagenes/Iconos/cancelar.png); background-size: 100% 100%; background-repeat: no-repeat;" action="novedad" value=" " actionListener="#{controlNovedadesTerceros.salir()}"/>
 
                         <p:commandButton style="position: absolute; left: 10px; top: 480px; " id="TODAS" value="#{msg['todas']}" actionListener="#{controlNovedadesTerceros.todasNovedades()}" disabled="#{controlNovedadesTerceros.todas}" process="@this" />
                         <p:commandButton style="position: absolute; left: 165px; top: 480px;" id="ACTUALES" value="#{msg['actuales']}" actionListener="#{controlNovedadesTerceros.actualesNovedades()}" disabled="#{controlNovedadesTerceros.actuales}" process="@this" />
@@ -500,8 +500,9 @@
                             </p:selectOneMenu>
 
                             <p:commandButton id="limpiarDuplicadoNovedad" value="#{msg['limpiar']}" icon="ui-icon-trash" style=" position: absolute; left: 50px; top: 370px;" actionListener="#{controlNovedadesTerceros.limpiarduplicarNovedades()}" update="duplicarNovedad" process="@this"/>
-                            <p:commandButton id="agregarDuplicadoNovedad" value="#{msg['agregar']}" icon="ui-icon-circle-check" style=" position: absolute; left: 550px; top: 370px;"  process="@this" actionListener="#{controlNovedadesTerceros.confirmarDuplicar()}" />
-                            <p:commandButton id="cancelarDuplicadoNovedad" value="#{msg['cancelar']}" icon="ui-icon-circle-close" style=" position: absolute; left: 650px; top: 370px;" actionListener="#{controlNovedadesTerceros.limpiarduplicarNovedades()}" update="duplicarNovedad" onclick="DuplicarRegistroNovedad.hide();"  process="@this"/>
+
+                            <p:commandButton id="agregarDuplicadoNovedad" style="position: absolute; left: 550px; top: 370px; height: 33px; width: 100px; background-image: url(Imagenes/Iconos/aceptar.png); background-size: 100% 100%; background-repeat: no-repeat;" value=" " actionListener="#{controlNovedadesTerceros.confirmarDuplicar()}" process="@this"/>
+                            <p:commandButton id="cancelarDuplicadoNovedad" style="position: absolute; left: 650px; top: 370px; height: 33px; width: 100px; background-image: url(Imagenes/Iconos/cancelar.png); background-size: 100% 100%; background-repeat: no-repeat;" value=" " actionListener="#{controlNovedadesTerceros.limpiarduplicarNovedades()}" update="duplicarNovedad" onclick="DuplicarRegistroNovedad.hide();"  process="@this"/>
                         </p:panel>
                     </p:dialog>
 
@@ -604,8 +605,8 @@
                             </p:selectOneMenu>
 
                             <p:commandButton id="limpiar" value="#{msg['limpiar']}" icon="ui-icon-trash" style=" position: absolute; left: 50px; top: 370px;" actionListener="#{controlNovedadesTerceros.limpiarNuevaNovedad()}" update="nuevaNovedad" process="@this"/>
-                            <p:commandButton id="agregarNE" value="#{msg['agregar']}" icon="ui-icon-circle-check" style=" position: absolute; left: 550px; top: 370px;"  actionListener="#{controlNovedadesTerceros.agregarNuevaNovedadTercero()}" process="@this"/>
-                            <p:commandButton id="cancelarNE" value="#{msg['cancelar']}" icon="ui-icon-circle-close" style=" position: absolute; left: 650px; top: 370px;" actionListener="#{controlNovedadesTerceros.limpiarNuevaNovedad()}" update="nuevaNovedad" onclick="NuevaNovedadTercero.hide();"  process="@this"/>
+                            <p:commandButton id="agregarNE" style="position: absolute; left: 550px; top: 370px; height: 33px; width: 100px; background-image: url(Imagenes/Iconos/aceptar.png); background-size: 100% 100%; background-repeat: no-repeat;" value=" " actionListener="#{controlNovedadesTerceros.agregarNuevaNovedadTercero()}" process="@this"/>
+                            <p:commandButton id="cancelarNE" style="position: absolute; left: 650px; top: 370px; height: 33px; width: 100px; background-image: url(Imagenes/Iconos/cancelar.png); background-size: 100% 100%; background-repeat: no-repeat;" value=" " actionListener="#{controlNovedadesTerceros.limpiarNuevaNovedad()}" update="nuevaNovedad" onclick="NuevaNovedadTercero.hide();"  process="@this"/>
                         </p:panel>
                     </p:dialog>
 
